增加球体与射线碰撞检测，绘制球体

--- a/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj
+++ b/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <ClInclude Include="ApcDevice.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Ray.h" />
     <ClInclude Include="Stdfx.h" />
     <ClInclude Include="Vector3.h" />
   </ItemGroup>
