--- a/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
+++ b/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="ApcDevice.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Ray.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
