增加相机类

--- a/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj
+++ b/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ApcDevice.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="HitableObject.h" />
     <ClInclude Include="Ray.h" />
