--- a/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
+++ b/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Sphere.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
