--- a/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
+++ b/AlpacaRayTracingRenderer/AlpacaRayTracingRenderer.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="MetalMaterial.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="RefractMaterial.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
